src/screens/LoginScreen.css
.HealthCareTitleHome {
  width: 100%;
  height: 100%;
  font-family: 'Open Sans', sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 40px;
  margin-right: auto;
  margin-left: auto;
  text-align: center;
  align-self: flex-end;
  color: var(--color-white);
  background: linear-gradient(0deg, rgba(0,0,0,0.65) 0%, rgba(255,255,255,0) 100%);
  vertical-align: bottom;
  display: flex;
  justify-content: center;
  align-items: flex-end;
}

.textLogin{
  font-size: 20px!important;
  width: 437px;
  margin: auto;
  font-weight: 400!important;
  line-height: 28px;
}

.HealthCareHome {
  background-image: url(../../public/assets/backgroundapp.jpg);
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  background-color: var(--color-blue-dark-primary);
  height: 30vh;
  width: 100%;
  margin-bottom: 0px;
  display: flex;    
}

.hrHomeHeader {
  height: 5px;
  background-color: var(--color-blue-dark-secondary);
}

